fix: add overflow-y

--- a/src/sass/base/_utils.scss
+++ b/src/sass/base/_utils.scss
@@ -1,5 +1,6 @@
 html {
   scroll-behavior: smooth;
+  overflow-y: scroll;
 }
 
 body {
